docs/pages/versions/v57.0.0/sdk/ui/swift-ui/lazyvstack.mdx
---
title: LazyVStack
description: A SwiftUI LazyVStack component for lazy vertical layouts.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'tvos', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';

Expo UI LazyVStack matches the official SwiftUI [LazyVStack API](https://developer.apple.com/documentation/swiftui/lazyvstack) and arranges its children vertically, creating items only as needed (when they become visible during scrolling).

> **info** `LazyVStack` is not truly lazy yet: the native side only builds visible items, but React still creates every child up front, so large lists can be slow to mount. We are working on improving this. For large lists, we recommend [FlashList](https://shopify.github.io/flash-list/) or [Legend List](https://github.com/LegendApp/legend-list).

## Installation

<APIInstallSection />

## Usage

### Basic lazy vertical stack

LazyVStack should be used inside a `ScrollView` to enable lazy rendering.

<ComponentExample
  title="BasicLazyVStackExample.tsx"
  src="/static/images/expo-ui/examples/lazyvstack-basic-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/lazyvstack-basic-ios-dark.webp"
  alt="A vertical list of items numbered zero to twenty-four.">

```tsx
import {
  Host,
  ScrollView,
  LazyVStack,
  Text,
} from '@expo/ui/swift-ui';

export default function BasicLazyVStackExample() {
  return (
    <Host style={{ flex: 1 }}>
      <ScrollView>
        <LazyVStack spacing={12}>
          {Array.from({ length: 100 }, (_, i) => (
            <Text key={i}>{`Item ${i}`}</Text>
          ))}
        </LazyVStack>
      </ScrollView>
    </Host>
  );
}
```

</ComponentExample>

### With alignment

The `alignment` prop controls horizontal alignment of children. Available options are: `leading`, `center`, and `trailing`.

<ComponentExample
  title="LazyVStackAlignmentExample.tsx"
  src="/static/images/expo-ui/examples/lazyvstack-alignment-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/lazyvstack-alignment-ios-dark.webp"
  alt="Three rectangles of different widths stacked vertically, aligned to the leading edge.">

```tsx
import {
  Host,
  ScrollView,
  LazyVStack,
  Rectangle,
} from '@expo/ui/swift-ui';
import { frame } from '@expo/ui/swift-ui/modifiers';

export default function LazyVStackAlignmentExample() {
  return (
    <Host
      matchContents={{ vertical: true }}
      style={{ width: '100%' }}>
      <ScrollView>
        <LazyVStack spacing={12} alignment="leading">
          <Rectangle
            modifiers={[frame({ width: 50, height: 50 })]}
          />
          <Rectangle
            modifiers={[frame({ width: 100, height: 50 })]}
          />
          <Rectangle
            modifiers={[frame({ width: 75, height: 50 })]}
          />
        </LazyVStack>
      </ScrollView>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { LazyVStack } from '@expo/ui/swift-ui';
```

<APISection
  packageName="expo-ui/swift-ui/lazyvstack"
  apiName="LazyVStack"
/>
